// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`unsupported $multi call ($multi()): code 1`] = `
"local ____exports = {}
function ____exports.__main(self)
    ____(nil)
end
return ____exports"
`;

exports[`unsupported $multi call ($multi()): diagnostics 1`] = `"main.ts(2,13): error TSTL: The $multi() function can only be used in a return statement."`;

exports[`unsupported $multi call ($multi): code 1`] = `
"local ____exports = {}
function ____exports.__main(self)
    local ____ = ____
end
return ____exports"
`;

exports[`unsupported $multi call ($multi): diagnostics 1`] = `"main.ts(2,13): error TSTL: The $multi() function can only be used in a return statement."`;

exports[`unsupported $multi call (({ $multi });): code 1`] = `
"local ____exports = {}
function ____exports.__main(self)
    local ____ = nil
end
return ____exports"
`;

exports[`unsupported $multi call (({ $multi });): diagnostics 1`] = `"main.ts(2,16): error TSTL: The $multi() function can only be used in a return statement."`;

exports[`unsupported $multi call ([] = $multi()): code 1`] = `
"local ____exports = {}
function ____exports.__main(self)
     = table.unpack(
        ____(nil)
    )
end
return ____exports"
`;

exports[`unsupported $multi call ([] = $multi()): diagnostics 1`] = `"main.ts(2,18): error TSTL: The $multi() function can only be used in a return statement."`;

exports[`unsupported $multi call (const [] = $multi();): code 1`] = `
"local ____exports = {}
function ____exports.__main(self)
    local ____ = table.unpack(
        ____(nil)
    )
end
return ____exports"
`;

exports[`unsupported $multi call (const [] = $multi();): diagnostics 1`] = `"main.ts(2,24): error TSTL: The $multi() function can only be used in a return statement."`;
